# ComputionalMethods

./: CMakeLists.txt
include/: ComputionalMethods.h
sample/: main.cpp
src/: ComputionalMethod.cpp  GaussMethod.cpp  GaussMethod.h  KramerMethod.cpp  KramerMethod.h  SeidelMethod.cpp  SeidelMethod.h  SimpleIterationMethod.cpp  SimpleIterationMethod.h  UpperRelaxationMethod.cpp  UpperRelaxationMethod.h
